syntax = "proto3";

package order.v1alpha;

message Order {
  int32 id = 1;
  int32 idProduct = 2;
  int32 quantityProduct = 3;
}


service OrderService {
  rpc GetOrders (GetOrderRequest) returns (GetOrderResponse);
  rpc CreateOrder (CreateOrderRequest) returns (Order);
  rpc UpdateOrder (UpdateOrderRequest) returns (Order);
  rpc DeleteOrder (DeleteOrderRequest) returns (Order);
}

message GetOrderRequest {
    int32 id = 1;
    int32 idProduct = 2;
    int32 quantityProduct = 3;
}


message GetOrderResponse {
  repeated Order orders = 1;
}


message CreateOrderRequest {
  int32 idProduct = 1;
  int32 quantityProduct = 2;
}


message UpdateOrderRequest {
  int32 id = 1;
  Order order = 2;
}

message DeleteOrderRequest {
  int32 id = 1;
}

message Empty {}